--- a/TONetworkingDemo/TONetworkingDemo/Base.lproj/Main.storyboard
+++ b/TONetworkingDemo/TONetworkingDemo/Base.lproj/Main.storyboard
@@ -21,10 +21,17 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IhX-w4-6h6">
                                 <rect key="frame" x="0.0" y="44" width="600" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="uQw-wy-6lK"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="HW1-eA-dUN"/>
+                                </connections>
                             </tableView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="cAg-Ja-yeu">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="9iy-82-Ig1"/>
+                                </connections>
                             </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -38,6 +45,10 @@
                             <constraint firstItem="cAg-Ja-yeu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="fSD-Qh-luK"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="menuTable" destination="IhX-w4-6h6" id="sWD-vJ-sFN"/>
+                        <outlet property="searchBar" destination="cAg-Ja-yeu" id="bwW-KB-KVd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
